[package]
name = "rust_nodes"
version = "0.1.0"
edition = "2021"

[[bin]]
name="simple_publisher"
path="src/publisher.rs"

[[bin]]
name="simple_subscriber"
path="src/subscriber.rs"

[[bin]]
name = "lsp_server"
path = "src/lsp_server.rs"


[dependencies]
rclrs = "*"
std_msgs = "*"
tower-lsp = "0.20.0"  # (Check for the latest version)
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3"
glob = "0.3.2"